# Saathi

./: .env.example  .gitignore  README.md  SOLUTION.md  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  saathi.db  saathi_seed.db
api/: app.py  routes.py  schemas.py
config/: settings.py  taxonomy.py
data/: recall_queue.json  reset_db.py  seed_db.py  seed_users.py  taxonomy.json  transcripts_raw.py  users.json  video_artifacts.json  videos.json  write_transcripts.py
data/transcripts/: interview_confidence.txt
db/: base.py  init_db.py  models.py  operations.py
demo/: api_client.py  app.py
demo/components/: html_blocks.py  preprocessing_panel.py  state_display.py  system_panel.py  user_panel.py
documentation/: 00-index.md  01-background.md  02-original-problem.md  03-ai-vision.md  04-scoped-problem.md  05-solution-overview.md  06-architecture.md  06-demo-overview.md  07-architecture.md  07-demo-overview.md  08-design-decisions.md  08-design-document.md
engine/: classifier.py  evaluator.py  knowledge_updater.py  loop.py  progress_update.py  quiz_engine.py  recall_scheduler.py  recap_engine.py  recommender.py
llm/: anthropic_client.py  base.py  prompts.py
preprocessing/: concept_extractor.py  pipeline.py  question_generator.py  recap_generator.py
storage/: base.py  minio_client.py
tests/: print_all_data.py  test_api_endpoints.py  test_bootstrap.py  test_classifier.py  test_db_operations.py  test_full_loop.py  test_knowledge_updater.py  test_llm_client.py  test_recall_scheduler.py  test_recommender.py  test_storage_client.py
(+21 files in other folders)
