[project]
name = "saathi"
version = "0.1.0"
description = "Adaptive AI learning companion for Seekho — personalized recap, quiz, and recall after every video"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "click>=8.3.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saathi"]