[project]
name = "saathi"
version = "0.1.0"
description = "Adaptive AI learning companion for Seekho — personalized recap, quiz, and recall after every video"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "plotly",
    "pandas",
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "minio>=7.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "pytest>=8.0.0",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.55.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saathi"]

[tool.pytest.ini_options]
testpaths = ["tests"]